# ORG2

./: .env.example  .eslintrc.js  .gitignore  CONTRIBUTING.md  DESIGN_PHILOSOPHY.md  README.md  SECURITY.md  package.json  tailwind.config.js  tsconfig.json  webpack.config.js
.github/workflows/: ci.yml  release.yaml
cloudflare/collab-hub/: README.md  package.json
docs/architecture-audit-2026-06-13/: GLOBAL.md
docs/architecture-audit-2026-06-17/: repo-scoped-git-branch-state.md
public/: index.html  orgii_dark.css  orgii_high_contrast.css  orgii_main.css
src/: App.tsx  index.scss  index.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/crates/orgtrack-core/: Cargo.toml
src-tauri/crates/orgtrack-core/src/: canonical.rs  lib.rs  sync_export.rs
src-tauri/crates/orgtrack-core/src/privacy/: mod.rs
src-tauri/crates/orgtrack-core/src/projectors/: mod.rs  replay.rs  session_blame.rs  stats.rs
src-tauri/crates/orgtrack-core/src/repo_sync/: mod.rs  paths.rs  types.rs
src-tauri/crates/orgtrack-core/src/sources/: activity.rs  cli_session_db.rs  mod.rs  orgii_cli.rs  orgii_rust_agents.rs
src-tauri/crates/orgtrack-core/src/sources/claude_code/: db.rs  history.rs
src-tauri/crates/orgtrack-core/src/sources/codex/: app.rs
src-tauri/crates/orgtrack-core/src/sources/cursor_ide/: db.rs  history.rs  summaries.rs
src-tauri/crates/orgtrack-core/src/sources/imported_history/: cache.rs  cache_tests.rs
src-tauri/crates/orgtrack-core/src/sources/opencode/: history.rs
src-tauri/crates/orgtrack-core/src/sources/windsurf/: history.rs
src-tauri/crates/orgtrack-core/src/store/: mod.rs  sqlite.rs
src-tauri/crates/orgtrack-graph/: Cargo.toml
src-tauri/crates/orgtrack-graph/src/: lib.rs  project.rs  query.rs  schema.rs  store.rs
src-tauri/crates/orgtrack-sync/: Cargo.toml
src-tauri/crates/orgtrack-sync/src/: approval.rs  canonical_json.rs  ids.rs  layout.rs  lib.rs  records.rs  redaction.rs
wiki/: Getting-Started.md  Home.fr.md  Home.md  Home.zh.md  _Sidebar.md
(+1570 files in other folders)
