[package]
name = "orgtrack_graph"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
description = "Local SQLite graph and query index for ORGII project, session, trajectory, and AI Blame sync records."
license = "AGPL-3.0-or-later"
publish = false

[lib]
name = "orgtrack_graph"
path = "src/lib.rs"

[dependencies]
orgtrack_sync = { path = "../orgtrack-sync" }
rusqlite = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { workspace = true }
