[package]
name = "orgtrack_sync"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
description = "Shared metadata sync records for ORGII project, session, trajectory, and AI Blame graph synchronization."
license = "AGPL-3.0-or-later"
publish = false

[lib]
name = "orgtrack_sync"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { workspace = true }
sha2 = "0.10"
